k8s-manifests/command-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connected-car-command
  namespace: miniproject
  labels:
    app: connected-car-command
    tier: backend
    cqrs: command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connected-car-command
  template:
    metadata:
      labels:
        app: connected-car-command
        tier: backend
        cqrs: command
    spec:
      containers:
        - name: command-api
          image: sbddjt/telemetry-ingest-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: connected-car-command-svc
  namespace: miniproject
  labels:
    app: connected-car-command
spec:
  type: ClusterIP
  selector:
    app: connected-car-command
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connected-car-command-consumer
  namespace: miniproject
  labels:
    app: connected-car-command-consumer
    tier: worker
    cqrs: command
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connected-car-command-consumer
  template:
    metadata:
      labels:
        app: connected-car-command-consumer
        tier: worker
        cqrs: command
    spec:
      containers:
        - name: command-consumer
          image: sbddjt/telemetry-mongo-consumer:v1
          imagePullPolicy: IfNotPresent
