k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connected-car-frontend
  namespace: miniproject
  labels:
    app: connected-car-frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connected-car-frontend
  template:
    metadata:
      labels:
        app: connected-car-frontend
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: {도커허브ID}/mobility-frontend:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: connected-car-frontend-svc
  namespace: miniproject
  labels:
    app: connected-car-frontend
spec:
  type: NodePort
  selector:
    app: connected-car-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30001
