k8s-manifests/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: miniproject
  labels:
    app: mongo
spec:
  serviceName: mongo-hl-svc
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:7
        args: ["--wiredTigerCacheSizeGB", "0.25"]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 5
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 5
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-storage
        resources:
          requests:
            storage: 5Gi

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-hl-svc
  namespace: miniproject
  labels:
    app: mongo
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: miniproject
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
