k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobility-api-ingress
  namespace: miniproject
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/map/
            pathType: Prefix
            backend:
              service:
                name: connected-car-frontend-svc
                port:
                  number: 80
          - path: /api/query/telemetry
            pathType: Prefix
            backend:
              service:
                name: connected-car-command-svc
                port:
                  number: 80
          - path: /api/vehicles
            pathType: Prefix
            backend:
              service:
                name: connected-car-query-svc
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: connected-car-query-svc
                port:
                  number: 80
          - path: /api/health
            pathType: Prefix
            backend:
              service:
                name: connected-car-query-svc
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connected-car-frontend-svc
                port:
                  number: 80
